Fixed issues with display on smaller screens

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 /// Primary color
-$primary-color: #38003c  !default;
+$primary-color: #38003c !default;
 
 // Selection color
 $selection-color: #e42e4c !default;
@@ -18,3 +18,25 @@ $highlight-color-lighter: lighten($highlight-color, 20%) !default;
 $body-bg-color: #f5f5f5 !default;
 
 
+/// Media queries breakpoints
+
+// Extra small screen / phone
+$screen-xs: 480px;
+$screen-xs-min: $screen-xs;
+
+// Small screen / tablet
+$screen-sm: 768px;
+$screen-sm-min: $screen-sm;
+
+// Medium screen / desktop
+$screen-md: 992px;
+$screen-md-min: $screen-md;
+
+// Large screen / wide desktop
+$screen-lg: 1200px;
+$screen-lg-min: $screen-lg;
+
+// So media queries don't overlap when required, provide a maximum
+$screen-xs-max: ($screen-sm-min - 1);
+$screen-sm-max: ($screen-md-min - 1);
+$screen-md-max: ($screen-lg-min - 1);
