--- a/src/assets/styles/components/_standings-table.scss
+++ b/src/assets/styles/components/_standings-table.scss
@@ -2,6 +2,8 @@
 // This file contains all styles related to standings table component.
 // -----------------------------------------------------------------------------
 
+@import "../abstracts/variables";
+
 $table-border-color: #e8e8e8;
 
 .pl-standings-table {
@@ -32,7 +34,6 @@ $table-border-color: #e8e8e8;
 
   .pl-number-column,
   .pl-pos-column {
-    width: 6%;
     max-width: 55px;
   }
 
@@ -43,22 +44,6 @@ $table-border-color: #e8e8e8;
     text-align: left;
   }
 
-  @media (max-width: 575px) {
-    td,
-    th {
-      padding: 7px 8px;
-    }
-
-    .pl-team-column {
-      width: 25%;
-    }
-
-    .pl-pos-column {
-      width: 8%;
-      max-width: 60px;
-    }
-  }
-
   .pl-standings-emblem {
     display: flex;
     align-items: center;
@@ -67,4 +52,44 @@ $table-border-color: #e8e8e8;
       margin-left: -10px;
     }
   }
+
+  @media (max-width: $screen-xs-max) {
+    td,
+    th {
+      font-size: 13px;
+      padding: 8px 6px;
+    }
+
+    .pl-number-column,
+    .pl-pos-column {
+      width: 48px;
+      max-width: 48px;
+    }
+  }
+
+  @media (max-width: $screen-xs) {
+    td,
+    th {
+      font-size: 13px;
+      padding: 8px 5px;
+    }
+
+    .pl-number-column {
+      width: 32px;
+      max-width: 32px;
+    }
+
+    .pl-pos-column {
+      width: 38px;
+      max-width: 38px;
+      padding-left: 0;
+    }
+
+    .pl-standings-emblem {
+      img {
+        display: none !important;
+      }
+    }
+  }
+
 }
