--- a/src/assets/styles/pages/_results-page.scss
+++ b/src/assets/styles/pages/_results-page.scss
@@ -2,6 +2,8 @@
 // This file contains all styles related to match results page.
 // -----------------------------------------------------------------------------
 
+@import "../abstracts/variables";
+
 $list-item-border-color: #efefef;
 
 .pl-results-filter {
@@ -12,18 +14,6 @@ $list-item-border-color: #efefef;
   margin: 0 auto;
   padding: 0;
   width: 100%
-}
-
-@media (min-width: 767px) {
-  .pl-results-list {
-    width: 60%
-  }
-}
-
-@media (min-width: 576px) {
-  .pl-results-list {
-    width: 80%
-  }
 }
 
 .pl-results-list-item {
